--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ qt_add_qml_module(appExcelFilesCount
     VERSION 1.0
     QML_FILES
         src/qml/Main.qml
+        SOURCES
+        RESOURCES src/resources/resources.qrc
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
